# turtls

./: .editorconfig  .rustfmt.toml  Cargo.toml  HANDSHAKE.md  README.md  ROADMAP.md  cbindgen.toml  cbindgen_generate.sh  ecc.py  poly1305.py  rustfmt.toml  turtls.h  turtls.pc
.github/workflows/: docs.yaml  rust.yml
crylib/: Cargo.toml  README.md
crylib/src/: aead.rs  big_int.rs  ec.rs  finite_field.rs  hkdf.rs  hmac.rs  lib.rs
crylib/src/aead/: chacha.rs  gcm.rs
crylib/src/aead/chacha/: chacha20.rs  poly1305.rs
crylib/src/aead/gcm/: aes.rs
crylib/src/big_int/: signed.rs  unsigned.rs
crylib/src/ec/: ecdsa.rs  point.rs  secp256r1.rs
crylib/src/ec/point/: affine.rs  projective.rs
crylib/src/finite_field/: field_element.rs
crylib/src/hash/: buf_hasher.rs  sha256.rs  sha512.rs
docs/: dark.css  features.html  index.html  light.css  main.css  turtls.css
feedback-loop/: feedback-11-22-2024  project-plan-draft-11-22-2024
include/: turtls.h
libcrypto/: Cargo.toml  README.md
libcrypto/src/: aead.rs  aes.rs  big_int.rs  elliptic_curve.rs  finite_field.rs  gcm.rs  hash.rs  hkdf.rs  hmac.rs  lib.rs  sha2.rs  sha256.rs  sha512.rs
libcrypto/src/aead/: chacha.rs  gcm.rs
libcrypto/src/aes/: aes.rs  aes_core.rs  gcm.rs  mod.rs
libcrypto/src/big_int/: signed.rs  unsigned.rs
libcrypto/src/chacha/: chacha20.rs  mod.rs
libcrypto/src/dsa/: ecdsa.rs  (+2 more)
src/: aead.rs  aes.rs  alert.rs  certificates.rs  cipher_suites.rs  client.rs  client_hello.rs  config.rs  connect.rs  dh.rs  error.rs  extensions.rs  gcm.rs  handshake.rs  init.rs  key_schedule.rs  lib.rs  main.rs  record.rs  server_hello.rs  sha256.rs  state.rs  versions.rs
src/aes/: mod.rs
src/certificates/: der.rs  x509.rs
src/extensions/: app_proto.rs  key_share.rs  server_name.rs  sig_algs.rs  versions.rs
src/gcm/: mod.rs  packet.rs
src/record/: enc.rs  enc_rl.rs  encrypt.rs  raw.rs  read.rs  unenc.rs  unenc_rl.rs  write.rs
(+22 files in other folders)
