[workspace]
members = ["libcrypto"]
[package]
name = "turtls"
version = "0.1.0"
authors = ["Lukas Renner"]
edition = "2021"
readme = "./README.md"
keywords = ["tls", "crypto", "ssl"]
license = "Apache-2.0"
description = "a TLS library written in rust"

[dependencies]
libcrypto = { path = "./libcrypto/", version = "0.1.0" }
