[workspace]
default-members = [".", "crylib"]

[package]
name = "turtls"
version = "0.1.0"
authors = ["Lukas Renner"]
edition = "2021"
readme = "./README.md"
keywords = ["tls", "crypto", "ssl"]
license = "Apache-2.0"
description = "A TLS library."
repository = "https://github.com/lukasvrenner/turtls"
documentation = "https://docs.rs/turtls/latest/turtls"
categories = ["network-programming", "cryptography"]

[dependencies]
crylib = { path = "./crylib/", version = "0.1.0" }
getrandom = "0.2.15"

[lib]
crate-type = ["cdylib"]
