[package]
name = "crylib"
version = "0.2.0"
authors = ["Lukas Renner"]
edition = "2021"
readme = "./README.md"
keywords = ["crypto"]
license = "Apache-2.0"
description = "a collection of cryptographic functions"
repository = "https://github.com/lukasvrenner/turtls"
documentation = "https://docs.rs/crylib/latest/crylib"
categories = ["no-std", "cryptography"]
